Fixed a bug with the alignment of the icons

--- a/src/css/project_css/ui/general.scss
+++ b/src/css/project_css/ui/general.scss
@@ -7,6 +7,8 @@
     --ui-top-bar-height: 2.9rem;
     --ui-side-bar-width: 230px;
     --ui-side-bar-toggle-button-width: 1.15rem;
+    --ui-icon-height: 20px;
+    --ui-icon-width: 20px;
 
     // --max-mobileUI-portrait-width: 500px;
 
@@ -46,7 +48,7 @@
 }
 
 .ui-icon-glow {
-  &:hover {
+  img:hover {
     filter: drop-shadow(0px 0px 4px white);
   }
 }
