--- a/src/css/project_css/ui/ui_side_bar.scss
+++ b/src/css/project_css/ui/ui_side_bar.scss
@@ -98,6 +98,8 @@
 
       border: thin solid;
 
+      min-height: calc(var(--ui-icon-height) * 1.25);
+
       & > [class|="ui-stat-others"] {
         @include uiRightmostIconsFlexContainer;
       }
